--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -6,18 +6,56 @@ page-cards {
         text-align: center;
         font-size: 24px;
         font-weight: bold;
+        color: #fff;
     }
 
     .cardBordRadius {
         border-radius: 5px;
     }
 
+    .restart-button {
+        background-color: #43c1c1;
+        width: 90%;
+        margin-left: 5%;
+    }
+
+    .my-bg {
+        background-color: #43c1c1;
+    }
+
     .pickedCard {
-        background-color: #ff2;
+        // background-color: #ff2;
+        border: #00ffff 3px dashed;
     }
 
     .grey-bg {
         background-color: #e0e0d8;
     }
+
+    .total-12-cards {
+        height: 105px !important;
+        font-size: 24px !important;
+    }
+
+    .total-20-cards {
+        height: 80px !important;
+        font-size: 20px !important;
+    }
+
+    .total-30-cards {
+        height: 80px !important;
+        font-size: 10px !important;
+    }
+
+    .page-title {
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    .error-counter {
+        font-size: 15px;
+        margin-top: 5px;
+    }
+
 
 }
